--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "hanzc",
   "license": "ISC",
   "dependencies": {
+    "koa":"^2.5.1",
     "busboy": "^0.2.14",
     "koa-bodyparser": "^3.2.0",
     "koa-log4": "^2.2.1",
